--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,16 +1,15 @@
 <Project>
-    <PropertyGroup>
+	<PropertyGroup>
 		<TargetFramework>net7.0-windows</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Authors>ArchiTed</Authors>
-		<Version>1.0.36</Version>
+		<Authors>ChrisMellor</Authors>
+		<Version>1.0.0.0</Version>
 		<PlatformTarget>x64</PlatformTarget>
 		<Platforms>AnyCPU</Platforms>
 
 		<DalamudLibPath>$(AppData)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
-    </PropertyGroup>
-    <ItemGroup>
-        <Reference Include="Dalamud">
+	</PropertyGroup>
+	<ItemGroup>
+		<Reference Include="Dalamud">
 			<HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
@@ -54,5 +53,5 @@
 		<Using Include="RotationSolver.Basic.Rotations.Basic" />
 		<Using Include="System.Numerics" />
 		<Using Include="System.Reflection" />
-    </ItemGroup>
+	</ItemGroup>
 </Project>
